# tiny-speculators

./: .gitignore  LICENSE  README.md  pyproject.toml
tiny_speculators/: config.py  modal_pipeline.py
tiny_speculators/eagle3/: attention.py  config.py  data.py  model.py  vocab.py
tiny_speculators/scripts/: export_vllm.py  generate_hidden_states.py  pipeline.py  prepare_data.py  train_eagle3.py  vllm_inference.py  vocab_mapping.py
tiny_speculators/tests/: test_eagle3.py  test_pipeline.py
